feat: update email handling to support SMTP and CLI strategies, enhancing flexibility in lead submission

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,21 @@
 # Porta exposta pelo Express
 PORT=3000
 
-# Configurações SMTP/Postfix (container -> host)
-SMTP_HOST=host.docker.internal
+# Estratégia de envio (smtp | mail | sendmail)
+MAIL_STRATEGY=smtp
+
+# Configurações SMTP (usadas quando MAIL_STRATEGY=smtp)
+SMTP_HOST=192.168.250.51
 SMTP_PORT=25
 SMTP_SECURE=false
 SMTP_TLS_REJECT_UNAUTHORIZED=false
 SMTP_USER=
 SMTP_PASS=
+
+# Configurações CLI (MAIL_STRATEGY=mail/sendmail)
+MAIL_CLI=mail
+MAIL_EXTRA_ARGS=
+MAIL_DISABLE_R=0
 
 # Endereços de e-mail
 MAIL_FROM=no-reply@grupoimagetech.com.br
